array.island.Island.scala.error
Compilation error:
Island:3: error: identifier expected but integer literal found.
  return num[0]
             ^Island:4: error: ']' expected but '}' found.
} 
^